--- a/piket.html
+++ b/piket.html
@@ -330,6 +330,7 @@
                             <span class="anggota">Sidiq</span>
                             <span class="anggota">Ivan</span>
                             <span class="anggota">Fau</span>
+                            <span class="anggota">Faisal</span>
                         </div>
                     </div>
                     
